--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
           All due dates are terminal at 11:59CT. Work turned in after their time and date will
           be late and subject to an award of 0 points.
         </p>
+        <p>I am Lochana</p>
+        <p>I am from Sri Lanka</p>
+        <p>I want to learn the fundamentals of web development</p>
         <section class="topics">
           <h3>Topic Schedule&#58;</h3>
           <div id="accordion">
